--- a/Inwentaryzacja/Inwentaryzacja/Inwentaryzacja/Inwentaryzacja.csproj
+++ b/Inwentaryzacja/Inwentaryzacja/Inwentaryzacja/Inwentaryzacja.csproj
@@ -33,6 +33,9 @@
     <EmbeddedResource Update="views\view-login\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="views\view-pdf\PDFVievPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="WelcomeViewPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
